# german-str

./: Cargo.toml  README.md
benches/: bench_vec_sorting.rs  benches.rs
src/: lib.rs
tests/: test.rs
