[package]
name = "german-str"
version = "0.1.0"
edition = "2021"
description = "small-string optimized string type with fast comparisons"
license = "MIT"
repository = "https://github.com/ostnam/german-str"

[dependencies]
arbitrary = { version = "1.3.2", optional = true }
ointers = "4.0.1"
serde = { version = "1.0.204", optional = true, default-features = false }

[dev-dependencies]
assert-panic = "1.0.1"
criterion = "0.5.1"
proptest = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.124"
smol_str = "0.2.2"

[features]
default = []
serde = ["serde/std"]

[[bench]]
name = "bench_vec_sorting"
harness = false
